k8s-script/my-hostname/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-hostname
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-hostname
  template:
    metadata:
      labels:
        app: my-hostname
    spec:
      containers:
      - name: my-hostname
        image: abuosi/my-hostname:latest
        ports:
        - containerPort: 8080
