k8s-script/my-hostname/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-hostname
spec:
  selector:
    app: my-hostname
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30003
  type: LoadBalancer
