k8s-script/my-hostname/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-hostname
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /hello
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: my-hostname
            port: 
              number: 80
